nag buhat sa ko ug simple na horizontal nav nga naa nay proper spacing ug fixed na para dili mawala pag scroll down.

--- a/myStyle.css
+++ b/myStyle.css
@@ -2,7 +2,29 @@ body {
     margin: 0;
     padding: 0;
 }
-
+/* HEADER */
+.container{
+    width: 960px;
+    margin: 0 auto;
+}
+.header{
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+}
+.logo{
+    float: left;
+    font-size: 15px;
+}
+li {
+    float: left;
+    margin-left: 15px;
+    padding-top: 15px;
+}
+.nav{
+    float: right;
+}
+/* BODY */
 #sec1 {
     height: 600px;
     width: 100%;
